--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,16 @@
 {
-    "rewrites": [
-      { "source": "/(.*)", "destination": "/" }
-       ]
-  }
+  "version": 2,
+  "builds": [
+    {
+      "src": "/Server.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/Server.js"
+    }
+    
+  ]
+}
