--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    
+    "dotenv": "^10.0.0",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "nodemon": "^3.1.7"
